; ModuleID = '/home/carl/AnghaBench/nanomsg/tests/extr_..srcutilssleep.c_nn_sleep.c'
source_filename = "/home/carl/AnghaBench/nanomsg/tests/extr_..srcutilssleep.c_nn_sleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_sleep(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.timespec, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = sdiv i32 %5, 1000
  %7 = getelementptr inbounds %struct.timespec, %struct.timespec* %4, i32 0, i32 0
  store i32 %6, i32* %7, align 4
  %8 = load i32, i32* %2, align 4
  %9 = srem i32 %8, 1000
  %10 = mul nsw i32 %9, 1000000
  %11 = getelementptr inbounds %struct.timespec, %struct.timespec* %4, i32 0, i32 1
  store i32 %10, i32* %11, align 4
  %12 = call i32 @nanosleep(%struct.timespec* %4, i32* null)
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* %3, align 4
  %14 = icmp eq i32 %13, 0
  %15 = zext i1 %14 to i32
  %16 = call i32 @errno_assert(i32 %15)
  ret void
}

declare dso_local i32 @nanosleep(%struct.timespec*, i32*) #1

declare dso_local i32 @errno_assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
